Fixed composer name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dahaisoft/ThinkphpPlus",
+    "name": "dahaisoft/thinkphp-plus",
     "type": "library",
     "description": "Thinkphp plus",
     "keywords": ["thinkphp","thinkphp plus"],
